--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,14 +25,15 @@ jobs:
           distribution: 'oracle'
           java-version: '17'
 
-      - name: Set Up Flutter
-        uses: subosito/flutter-action@v2
+      - name: Set Up Flutter (Latest Version)
+        uses: subosito/flutter-action@v3
         with:
-          flutter-version: '3.13.0'
+          flutter-version: 'latest'
           channel: 'stable'
 
       - name: Install Dependencies
         run: flutter pub get -v
+        retries: 3
 
       - name: Test flutter app
         run: flutter test
