--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,15 +25,15 @@ jobs:
           distribution: 'oracle'
           java-version: '17'
 
-      - name: Set Up Flutter (Latest Version)
+      - name: Set Up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: ' 3.19.0'
+          flutter-version: '3.13.0'
           channel: 'stable'
-
+      - name: Clean Flutter
+        run: flutter clean
       - name: Install Dependencies
         run: flutter pub get -v
-
 
       - name: Test flutter app
         run: flutter test
