--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,12 @@ dependencies:
   dots_indicator: ^3.0.0
   fluttericon: ^2.0.0
   carousel_slider: ^4.2.1
-
+  flutter_circular_text: ^0.3.1
+  animate_do: ^3.0.2
+  animated_appear: ^0.0.4
+  animations: ^2.0.8
+  flutter_bounceable: ^1.1.0
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
